# pmanager-scrape

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ai_recommendation.py  credentials.json  implementation_plan.md  main.py  main_all_transfer.py  main_bot_evaluate.py  main_bot_scout.py  main_cleanup_zero_skills.py  main_fixtures_sync.py  main_high_quality.py  main_import_league_results.py  main_import_round.py  main_instant_match_check.py  main_instant_match_monitor.py  main_low_price.py  main_match_prep.py  main_opponent_scout.py  main_podcast_pipeline.py  main_squad_sync.py  main_team_info.py  main_young_potential.py  pyproject.toml  requirements.txt  scraper_all_transfer.py  scraper_high_quality.py  scraper_low_price.py  scraper_opponent.py  scraper_team_info.py  scraper_young_potential.py  task.md  team_info.json  telegram_bot.py  telegram_scout_bot.py  transfer_targets.csv  transfer_targets_high_quality.csv  (+1 more)
.claude/: settings.json
.claude/commands/: build-web.md  dev.md  (+5 more)
db_schemas/: bot_opportunities.sql  fixture_analysis.sql  league_match_results.sql  match_reports.sql  my_squad.sql  opponent_plans.sql  round_reports.sql  saved_lineups.sql  tables.sql
docs/: BRD.md  PRD.md  SDD.md  TSD.md  pmanager_rules.json  pmanager_rules.md
reports/: scouting_report.html
scripts/: assemble_rules_json.py
source_docs/: rnd12_2026-05-30.md
src/: config.py  constants.py
supabase/: tables.sql
tests/: conftest.py  test_business_logic.py  test_config.py  test_constants.py  test_utils.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml
(+119 files in other folders)
